Html and css of header was added to project.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,38 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="main-container">
-      <header></header>
+      <header>
+        <nav class="nav">
+          <span id="logo">FORECASTAPP</span>
+          <div class="region">
+            <div class="search">
+              <input type="text" placeholder="Weather in ..." />
+              <button class="search__btn">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
+            </div>
+            <div class="temprature">
+              <sapn id="celsius">°C</sapn>
+              |
+              <sapn id="fahrenheit">°F</sapn>
+            </div>
+          </div>
+        </nav>
+      </header>
       <main></main>
     </div>
     <div class="background"></div>
+
+    <script src="/js/app.js"></script>
   </body>
 </html>
