--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     </div>
     <div class="background"></div>
 
-    <script src="/js/app.js"></script>
+    <script src="./js/app.js" type="module"></script>
   </body>
 </html>
